# QT-FFmeg

./: AGENTS.md  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
docs/: qt_ffmpeg_player_开发文档.md  windows_qt_widgets_ffmpeg_详细实施手册.md
player/: demuxthread.cpp  demuxthread.h  packetqueue.cpp  packetqueue.h  playercontroller.cpp  playercontroller.h  videodecoderthread.cpp  videodecoderthread.h  videodecodethread.cpp  videodecodethread.h  videorenderwidget.cpp  videorenderwidget.h  videostreaminfo.cpp  videostreaminfo.h
